--- a/style.css
+++ b/style.css
@@ -47,12 +47,13 @@
 .donate-area{
     display: flex;
     width: 80%;
-    padding: 4% 8%;
+    padding: 4%;
+    padding-left: 10%;
 }
 .money{
     text-align: center;
     width: 50%;
-    padding: 5% 2%;
+    padding: 3% 2%;
     margin-bottom: 1%;
     margin-left: 3%;
     margin-right: 3%;
@@ -101,4 +102,53 @@ hr{
 }
 #food{
     background-color: rgb(236, 235, 211);
+}
+.banner-three{
+    width: 80%;
+    display: flex;
+    gap: 40px;
+    padding: 3% 4%;
+}
+.difference{
+    color: rgb(240, 17, 173);
+}
+.subscribe-box{
+    margin:0 30%;
+    margin-bottom: 100px;
+    display: flex;
+    padding: 2% 0;
+    background-color: rgb(191, 253, 233);
+}
+.form-mid{
+    margin: auto;
+    display: inline-block;
+}
+input{
+    border: none;
+    border-radius: 5px;
+    padding: 0 10px;
+}
+button{
+    border: none;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding: 0 20px;
+    margin-left: -5px;
+    color: whitesmoke;
+    background-color: royalblue;
+    cursor: pointer;
+}
+footer{
+    padding: 50px 0;
+    background-color: black;
+    color: white;
+}
+footer h3{
+    font-family: 'Dancing Script', cursives;
+    text-align: center;
+    color: rgb(240, 17, 173);
+    font-size: 30px;
+}
+footer p{
+    text-align: center;
 }
