--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: 'Gulzar', serif;
 }
 .first-section{
@@ -46,9 +47,8 @@
 }
 .donate-area{
     display: flex;
-    width: 80%;
+    width: 100%;
     padding: 4%;
-    padding-left: 10%;
 }
 .money{
     text-align: center;
@@ -59,7 +59,7 @@
     margin-right: 3%;
     font-size: 18px;
     border: 0 solid black;
-    background-color:rgb(235, 240, 231);
+    background-color:rgb(248, 250, 246);
 }
 #selected-money{
     color: royalblue;
@@ -104,10 +104,20 @@ hr{
     background-color: rgb(236, 235, 211);
 }
 .banner-three{
-    width: 80%;
+    width: 100%;
     display: flex;
     gap: 40px;
-    padding: 3% 4%;
+    padding: 3% ;
+}
+.banner-three img{
+    width: 380px;
+    margin-top: 90px;
+    margin-left: 30px;
+    margin-right: 30px;
+    border-radius: 8px;
+}
+.support-div{
+    width: 35%;
 }
 .difference{
     color: rgb(240, 17, 173);
@@ -118,6 +128,7 @@ hr{
     display: flex;
     padding: 2% 0;
     background-color: rgb(191, 253, 233);
+    border-radius: 10px;
 }
 .form-mid{
     margin: auto;
@@ -126,7 +137,8 @@ hr{
 input{
     border: none;
     border-radius: 5px;
-    padding: 0 10px;
+    padding: 0 25px;
+    outline: none;
 }
 button{
     border: none;
